feat: 하트골드 게임 데이터 파이프라인 연동
